Kicked out Spring Boot MCP / now using native MCP SDK. Added Lucene Index MCP App as an MVP.